--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-theme: jekyll-theme-THEME-NAME
-name: UQ Extend Studio View Equals Live View
+theme: jekyll-theme-minima
+name: UQ Extend Studio View Equals Live View - Custom JS
